added db connection and began catalog page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
 h1 {
-  color: #fff;
+  /* color: #fff; */
 }
 
 .home-page {
@@ -9,7 +9,7 @@ h1 {
 
 .App {
   text-align: center;
-  background-color: #282c34;
+  /* background-color: #282c34; */
   min-height: calc(100vh);
   top: 0;
 }
@@ -21,7 +21,7 @@ h1 {
 }
 
 .App p {
-  color: #fff; 
+  /* color: #fff;  */
 }
 
 .App-link {
