added Add page - buggy - needs validation

--- a/client/src/views/Catalog/style.scss
+++ b/client/src/views/Catalog/style.scss
@@ -2,45 +2,9 @@
     text-align: left;
     padding: 20px;
 
-    p, h1 {
-        margin: 0;
+    .catalog {
+        box-shadow: 0 0 10px #ccc;
+        // padding:
     }
-   
-    .row {
 
-        .name {
-            background: #ccc;
-            width: 100%;
-            margin-bottom: 10px;
-            h1 {
-
-            }
-        }
-
-        .comp-info, .comp-des {
-            display: inline-block;
-            vertical-align: top;
-            width: 50%;
-            margin-bottom: 10px;
-
-        }
-
-        .comp-info {
-            .address {
-
-            }
-        }
-
-        .comp-des {
-           
-            
-        }
-
-        .financial {
-            .chart {
-                display: inline-block;
-                width: 50%;
-            }
-        }
-    }
 }
