--- a/client/src/views/Add/style.scss
+++ b/client/src/views/Add/style.scss
@@ -1,3 +1,47 @@
 .add-page {
-    
+
+    input, textarea, select {
+        width: 90%;
+        padding: 10px;
+        border: none;
+        border-bottom: 1px solid #ccc;
+    }
+    textarea {
+        min-height: 100px;
+    }
+    input {
+        margin: 5px 0;
+    }
+
+    .form {
+        margin: 0 auto;
+        text-align: center;
+        .col {
+            display: inline-block;
+            vertical-align: top;
+            width: 40%;
+            padding: 10px 20px;
+        }
+
+        .finance {
+            width: 95%;
+            margin: 0 auto;
+            text-align: center;
+
+            input {
+                display: inline-block;
+                width: 40%;
+                margin: 5px 10px;
+            }
+
+        }
+
+        button {
+            margin-top: 40px;
+            width: 40%;
+            padding: 10px;
+        }
+    }
+
+
 }
