added edit page and update and delete routes

--- a/client/src/components/CompRow/style.scss
+++ b/client/src/components/CompRow/style.scss
@@ -38,6 +38,10 @@
         // transition: .5s all ease-in-out;
         display: none;
 
+        .edit {
+            margin-bottom: 5px;
+        }
+
         .comp-address, .comp-des {
             display: inline-block;
             vertical-align: top;
