--- a/client/src/views/Compare/style.scss
+++ b/client/src/views/Compare/style.scss
@@ -1,3 +1,19 @@
 .compare-page {
     
+
+    .sort {
+        height: 40px;
+        padding: 5px 20px;
+
+        select {
+            height: 38px;
+            padding: 5px;
+            width: 80%;
+            font-size: 14px;
+        }
+    }
+
+    .companies-grid {
+        margin: 50px auto 100px;
+    }
 }
