--- a/client/src/views/Catalog/style.scss
+++ b/client/src/views/Catalog/style.scss
@@ -2,6 +2,10 @@
     text-align: left;
     padding: 20px;
 
+    h1 {
+        text-align: center;
+    }
+
     .catalog {
         box-shadow: 0 0 10px #ccc;
         margin-bottom: 100px;
