--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+
+body {
+  font-family: 'Roboto', sans-serif;
+  overflow-y: scroll;
+}
+
 h1 {
   /* color: #fff; */
 }
