--- a/client/src/views/Home/style.scss
+++ b/client/src/views/Home/style.scss
@@ -1,3 +1,14 @@
 .home-page {
+
+    .logo {
+        filter: invert(100%);
+        height: 200px;
+        width: 200px;
+    }
+
+    .intro {
+        width: 85%;
+        margin: 0 auto;
+    }
     
 }
